# devboards

./: .gitignore  Caddyfile  Caddyfile.template  Dockerfile.caddy  README.md  TODO.md  docker-compose.env  docker-compose.yaml  docker-entrypoint.sh  index.html  nginx.conf  tailwind.config.ts
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  todo.md  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FilterTags.tsx  (+3 more)
job-listings-api/: .env.example  .gitignore  Dockerfile  Dockerfile.scraper  README.md  celery_worker.py  jobs.db  pyproject.toml  requirements.txt  start.sh  supervisord.conf
job-listings-api/src/: main.py
job-listings-api/src/api/endpoints/: jobs.py
job-listings-api/src/core/: celery_config.py  config.py  database.py  exceptions.py
job-listings-api/src/db/seeds/: companies.py
job-listings-api/src/models/: job.py  schemas.py
job-listings-api/src/models/db/: company.py  job.py
job-listings-api/src/services/: job_aggregator.py
job-listings-api/src/services/scrapers/: __init__.py  ascentic_scraper.py  base_scraper.py  bs4_base.py  codemite_scraper.py  codimite_scraper.py  ifs_scraper.py  ninetyninex_scraper.py  rootcode_scraper.py  scrapy_base.py  wso2_scraper.py  zebra_scraper.py
job-listings-api/src/tools/: init_db.py
job-listings-api/src/utils/: helpers.py  logger.py  requests_helper.py
job-listings-api/tests/: __init__.py  conftest.py  test_jobs.py
nginx/conf.d/: proxy.conf
scripts/: upload-logo.sh
src/components/: JobCard.tsx
src/pages/: Index.tsx
(+7 files in other folders)
