[tool.poetry]
name = "job-listings-api"
version = "0.1.0"
description = ""
authors = ["minzi <minzique@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = "^0.115.7"
sqlalchemy = "^2.0.37"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"
scrapy = "^2.12.0"
celery = "^5.4.0"
uvicorn = "^0.34.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
